--- a/demo/olu/less/mgui.less
+++ b/demo/olu/less/mgui.less
@@ -33,4 +33,6 @@
 @import url(widget/empty/empty.less);
 // 回顶部
 @import url(widget/gotop/gotop.less);
+// 确认提示
+@import url(widget/confirm/confirm.less);
 
