--- a/demo/olu/less/widget/button/button.less
+++ b/demo/olu/less/widget/button/button.less
@@ -32,6 +32,7 @@
 
 .ui-btn-pink {
     color: @white;
+    background: #ff5e7a;        //兼容低端机型 eg:小米2
     .linear-gradient(e("top, #ff5e7a, #f24868"));
 
     &:active,
@@ -42,6 +43,7 @@
 
 .ui-btn-gray {
     color: @white;
+    background: #646464;        //兼容低端机型 eg:小米2
     .linear-gradient(e("top, #646464, #484848"));
 
     &:active,
