--- a/demo/olu/less/widget/loading/loading.less
+++ b/demo/olu/less/widget/loading/loading.less
@@ -2,8 +2,8 @@
 // Loading
 // --------------------------------------------------
 
-@loading-bg: "../../img/loading.png";
-@loading-mask-bg: "../../img/loading-mask.png";
+@loading-bg: "@{img_url}img/loading.png";
+@loading-mask-bg: "@{img_url}img/loading-mask.png";
 
 .ui-loading {
     display: inline-block;
